feat: new landing page v2

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@meteora-ag/dynamic-bonding-curve-sdk": "^1.3.0",
     "@mui/material": "^7.2.0",
     "@mui/x-charts": "^8.8.0",
+    "@radix-ui/react-slot": "^1.2.3",
     "@solana/spl-token": "^0.4.13",
     "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-backpack": "^0.1.14",
@@ -65,8 +66,10 @@
     "formidable": "^3.5.4",
     "jotai": "^2.12.3",
     "ky": "^1.8.1",
+    "lucide-react": "^0.544.0",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
+    "postprocessing": "^6.37.8",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "radix-ui": "~1.3.4",
     "react": "^19.1.0",
@@ -77,6 +80,7 @@
     "superstruct": "^2.0.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.180.0",
     "twitter-api-v2": "^1.24.0",
     "wrangler": "^4.24.3",
     "zod": "^3.24.2"
